# python-poetry-template

./: .gitignore  README.md  dockerfile  pyproject.toml
app/: README.md  pyproject.toml
src/app/: main.py
src/app/conf/: config.yaml
