[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name"]
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
# Add other runtime dependencies here

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.8.0"
pytest = "^7.4.0"
# Add other development dependencies here

[tool.poetry.group.test.dependencies]
# Add test dependencies here

[tool.poetry.group.prod.dependencies]
# Add production dependencies here

[tool.poetry.scripts]
app = "app.main:main"